; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_attrcache.c_attr_cache__lookup_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_attrcache.c_attr_cache__lookup_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*, i8*, i8*)* @attr_cache__lookup_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @attr_cache__lookup_path(i8** %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_4__*, align 8
  %13 = alloca i8*, align 8
  store i8** %0, i8*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %14 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %14, i32* %10, align 4
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %12, align 8
  %15 = load i8**, i8*** %6, align 8
  store i8* null, i8** %15, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @git_config__lookup_entry(%struct.TYPE_4__** %12, i32* %16, i8* %17, i32 0)
  store i32 %18, i32* %11, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* %11, align 4
  store i32 %21, i32* %5, align 4
  br label %74

22:                                               ; preds = %4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %24 = icmp ne %struct.TYPE_4__* %23, null
  br i1 %24, label %25, label %61

25:                                               ; preds = %22
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i8*, i8** %27, align 8
  store i8* %28, i8** %13, align 8
  %29 = load i8*, i8** %13, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %52

31:                                               ; preds = %25
  %32 = load i8*, i8** %13, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 0
  %34 = load i8, i8* %33, align 1
  %35 = sext i8 %34 to i32
  %36 = icmp eq i32 %35, 126
  br i1 %36, label %37, label %52

37:                                               ; preds = %31
  %38 = load i8*, i8** %13, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 1
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %41, 47
  br i1 %42, label %43, label %52

43:                                               ; preds = %37
  %44 = load i8*, i8** %13, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 2
  %46 = call i32 @git_sysdir_expand_global_file(i32* %10, i8* %45)
  store i32 %46, i32* %11, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %51, label %48

48:                                               ; preds = %43
  %49 = call i8* @git_buf_detach(i32* %10)
  %50 = load i8**, i8*** %6, align 8
  store i8* %49, i8** %50, align 8
  br label %51

51:                                               ; preds = %48, %43
  br label %60

52:                                               ; preds = %37, %31, %25
  %53 = load i8*, i8** %13, align 8
  %54 = icmp ne i8* %53, null
  br i1 %54, label %55, label %59

55:                                               ; preds = %52
  %56 = load i8*, i8** %13, align 8
  %57 = call i8* @git__strdup(i8* %56)
  %58 = load i8**, i8*** %6, align 8
  store i8* %57, i8** %58, align 8
  br label %59

59:                                               ; preds = %55, %52
  br label %60

60:                                               ; preds = %59, %51
  br label %69

61:                                               ; preds = %22
  %62 = load i8*, i8** %9, align 8
  %63 = call i32 @git_sysdir_find_xdg_file(i32* %10, i8* %62)
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %68, label %65

65:                                               ; preds = %61
  %66 = call i8* @git_buf_detach(i32* %10)
  %67 = load i8**, i8*** %6, align 8
  store i8* %66, i8** %67, align 8
  br label %68

68:                                               ; preds = %65, %61
  br label %69

69:                                               ; preds = %68, %60
  %70 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %71 = call i32 @git_config_entry_free(%struct.TYPE_4__* %70)
  %72 = call i32 @git_buf_dispose(i32* %10)
  %73 = load i32, i32* %11, align 4
  store i32 %73, i32* %5, align 4
  br label %74

74:                                               ; preds = %69, %20
  %75 = load i32, i32* %5, align 4
  ret i32 %75
}

declare dso_local i32 @git_config__lookup_entry(%struct.TYPE_4__**, i32*, i8*, i32) #1

declare dso_local i32 @git_sysdir_expand_global_file(i32*, i8*) #1

declare dso_local i8* @git_buf_detach(i32*) #1

declare dso_local i8* @git__strdup(i8*) #1

declare dso_local i32 @git_sysdir_find_xdg_file(i32*, i8*) #1

declare dso_local i32 @git_config_entry_free(%struct.TYPE_4__*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
